fix page shifting left when opening dropdown causes a scroll bar to appear

--- a/src/main/resources/META-INF/resources/css/app.css
+++ b/src/main/resources/META-INF/resources/css/app.css
@@ -1,3 +1,7 @@
+body {
+	overflow-y:scroll;
+}
+
 button.btn:focus {
     outline : none;
 }
